; ModuleID = '/home/carl/AnghaBench/nanomsg/src/protocols/pubsub/extr_trie.c_nn_trie_match.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/protocols/pubsub/extr_trie.c_nn_trie_match.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_trie = type { %struct.nn_trie_node* }
%struct.nn_trie_node = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nn_trie_match(%struct.nn_trie* %0, i32* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.nn_trie*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.nn_trie_node*, align 8
  %9 = alloca %struct.nn_trie_node**, align 8
  store %struct.nn_trie* %0, %struct.nn_trie** %5, align 8
  store i32* %1, i32** %6, align 8
  store i64 %2, i64* %7, align 8
  %10 = load %struct.nn_trie*, %struct.nn_trie** %5, align 8
  %11 = getelementptr inbounds %struct.nn_trie, %struct.nn_trie* %10, i32 0, i32 0
  %12 = load %struct.nn_trie_node*, %struct.nn_trie_node** %11, align 8
  store %struct.nn_trie_node* %12, %struct.nn_trie_node** %8, align 8
  br label %13

13:                                               ; preds = %3, %53
  %14 = load %struct.nn_trie_node*, %struct.nn_trie_node** %8, align 8
  %15 = icmp ne %struct.nn_trie_node* %14, null
  br i1 %15, label %17, label %16

16:                                               ; preds = %13
  store i32 0, i32* %4, align 4
  br label %59

17:                                               ; preds = %13
  %18 = load %struct.nn_trie_node*, %struct.nn_trie_node** %8, align 8
  %19 = load i32*, i32** %6, align 8
  %20 = load i64, i64* %7, align 8
  %21 = call i64 @nn_node_check_prefix(%struct.nn_trie_node* %18, i32* %19, i64 %20)
  %22 = load %struct.nn_trie_node*, %struct.nn_trie_node** %8, align 8
  %23 = getelementptr inbounds %struct.nn_trie_node, %struct.nn_trie_node* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = icmp ne i64 %21, %24
  br i1 %25, label %26, label %27

26:                                               ; preds = %17
  store i32 0, i32* %4, align 4
  br label %59

27:                                               ; preds = %17
  %28 = load %struct.nn_trie_node*, %struct.nn_trie_node** %8, align 8
  %29 = getelementptr inbounds %struct.nn_trie_node, %struct.nn_trie_node* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = load i32*, i32** %6, align 8
  %32 = getelementptr inbounds i32, i32* %31, i64 %30
  store i32* %32, i32** %6, align 8
  %33 = load %struct.nn_trie_node*, %struct.nn_trie_node** %8, align 8
  %34 = getelementptr inbounds %struct.nn_trie_node, %struct.nn_trie_node* %33, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = load i64, i64* %7, align 8
  %37 = sub i64 %36, %35
  store i64 %37, i64* %7, align 8
  %38 = load %struct.nn_trie_node*, %struct.nn_trie_node** %8, align 8
  %39 = call i64 @nn_node_has_subscribers(%struct.nn_trie_node* %38)
  %40 = icmp ne i64 %39, 0
  br i1 %40, label %41, label %42

41:                                               ; preds = %27
  store i32 1, i32* %4, align 4
  br label %59

42:                                               ; preds = %27
  %43 = load %struct.nn_trie_node*, %struct.nn_trie_node** %8, align 8
  %44 = load i32*, i32** %6, align 8
  %45 = load i32, i32* %44, align 4
  %46 = call %struct.nn_trie_node** @nn_node_next(%struct.nn_trie_node* %43, i32 %45)
  store %struct.nn_trie_node** %46, %struct.nn_trie_node*** %9, align 8
  %47 = load %struct.nn_trie_node**, %struct.nn_trie_node*** %9, align 8
  %48 = icmp ne %struct.nn_trie_node** %47, null
  br i1 %48, label %49, label %52

49:                                               ; preds = %42
  %50 = load %struct.nn_trie_node**, %struct.nn_trie_node*** %9, align 8
  %51 = load %struct.nn_trie_node*, %struct.nn_trie_node** %50, align 8
  br label %53

52:                                               ; preds = %42
  br label %53

53:                                               ; preds = %52, %49
  %54 = phi %struct.nn_trie_node* [ %51, %49 ], [ null, %52 ]
  store %struct.nn_trie_node* %54, %struct.nn_trie_node** %8, align 8
  %55 = load i32*, i32** %6, align 8
  %56 = getelementptr inbounds i32, i32* %55, i32 1
  store i32* %56, i32** %6, align 8
  %57 = load i64, i64* %7, align 8
  %58 = add i64 %57, -1
  store i64 %58, i64* %7, align 8
  br label %13

59:                                               ; preds = %41, %26, %16
  %60 = load i32, i32* %4, align 4
  ret i32 %60
}

declare dso_local i64 @nn_node_check_prefix(%struct.nn_trie_node*, i32*, i64) #1

declare dso_local i64 @nn_node_has_subscribers(%struct.nn_trie_node*) #1

declare dso_local %struct.nn_trie_node** @nn_node_next(%struct.nn_trie_node*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
